src/objects/TaxConnectorConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AllowableTaxCountries__c</fullName>
        <label>Allowable Address Validation Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <label>Company Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnableAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableAvaTax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable AvaTax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableDocumentCommit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Document Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>End Point</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>License Key</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateCode__c</fullName>
        <label>State Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>Account Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Tax Connector Config</label>
</CustomObject>